# zip-revelio

./: Cargo.toml  README.md  Readme.md  avoidRustBugs.txt  bugTracker.txt  current_error_log.txt  modules.txt  prd.txt  prompts.txt  ref01prd.txt  ref02archL1.txt  ref03archL2.txt  ref04archL3.txt  ref06currentErrorLog.txt  zzArchiveRef01.txt  zz_all_files_v2.txt  zz_archive01.txt  zz_modules.txt  zz_ref02archL2.txt  zz_rust_filesv1.txt
benches/: zip_processing.rs
src/: async_runtime.rs  buffer.rs  cli.rs  error.rs  error_handling.rs  file_handling.rs  lib.rs  main.rs  memory.rs  processor.rs  reader.rs  reporter.rs  scheduler.rs  stats.rs  sync.rs  thread_pool.rs  thread_safety.rs  types.rs  zip.rs
src/analyzer/: chunks.rs  mod.rs  zip.rs
src/buffer/: mmap.rs  mod.rs  pool.rs
src/models/: analysis.rs  file_info.rs  mod.rs
src/report/: format.rs  mod.rs  stats.rs
src/utils/: error.rs  mod.rs  progress.rs
src/worker/: mod.rs  pool.rs  task.rs
src/writer/: mod.rs  progress.rs  report.rs
src/zip/: entry.rs  error.rs  mod.rs  reader.rs
test_data/: README.md  generate_test_data.py
txt_ref_architecture/: 01_system_overview.txt  02_error_handling.txt  03_resource_management.txt  04_pattern_cross_reference.txt  ref02archL1.txt  ref02architL1.txt  ref03archL2.txt  ref04archL3.txt  simplified_arch.txt
txt_ref_files/: ref03bugTracker.txt  ref05zipweb.txt  ref06ASTresearch.txt  zz_refprompts.txt  zz_vision2025.txt
