[package]
name = "zip-revelio"
version = "0.1.0"
edition = "2021"
authors = ["Amul <amuldotexe@example.com>"]
description = "High-performance, memory-safe ZIP file analysis tool"
repository = "https://github.com/amuldotexe/zip-revelio"
license = "MIT"

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
rayon = "1.8.0"
clap = { version = "4.4.11", features = ["derive"] }
thiserror = "1.0.50"
bytes = "1.5.0"
dashmap = "5.5.3"
num_cpus = "1.16.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
indicatif = "0.17.7"
flate2 = "1.0.28"
async-trait = "0.1.75"
parking_lot = "0.12.1"
crossbeam-channel = "0.5.8"
nix = { version = "0.27.1", features = ["mman"] }
chrono = "0.4.31"
futures = "0.3.30"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
crc32fast = "1.3.2"

[dev-dependencies]
proptest = "1.3.1"
criterion = "0.5.1"
tempfile = "3.8.1"
rand = "0.8.5"
test-case = "3.3.1"

[[bench]]
name = "zip_processing"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1
debug = true
