[package]
name = "zip-revelio"
version = "0.1.0"
edition = "2021"
authors = ["Amul <amuldotexe@example.com>"]
description = "High-performance, memory-safe ZIP file analysis tool"
repository = "https://github.com/amuldotexe/zip-revelio"
license = "MIT"

[dependencies]
tokio = { version = "1.34", features = ["full"] }
rayon = "1.8"
zip = "0.6"
indicatif = "0.17"
thiserror = "1.0"
anyhow = "1.0"
structopt = "0.3"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
pretty_assertions = "1.4"

[[bench]]
name = "zip_processing"
harness = false

[profile.release]

[profile.dev]
